# measurable-backend

./: .dockerignore  .gitignore  BACKEND_AUDIT_REPORT.md  BACKEND_FEATURE_USER_SUGGESTIONS.md  BACKEND_FIX_AI_INSIGHTS_5_SLIDES.md  BACKEND_FIX_DAILY_SERIES_SUMMARY.md  BACKEND_FIX_META_DISCONNECT.md  BACKEND_FIX_META_OAUTH_FIRST_LOGIN.md  BACKEND_FIX_META_OAUTH_POPUP_CLOSE.md  BACKEND_FIX_METRIC_CONTRACT_5_SLIDES.md  BACKEND_OPTIMIZE_META_PAGES_LOADING.md  BACKEND_UNIFICATION_PHASE_1.md  BACKEND_UPDATE_5_SLIDES_METRICS_STRUCTURE.md  Dockerfile  META_METRICS_AVAILABILITY_AUDIT.json  META_METRICS_AVAILABILITY_AUDIT.md  README.md  promote_admin.py  pyproject.toml  tmp_report_392_audit.json
alembic/: env.py
app/: ai_agents.py  config.py  crypto.py  db.py  deps.py  errors.py  main.py  meta_data_catalog.py  models.py  report_metric_catalog.py  schemas.py  security.py  services.py
scripts/: audit_facebook_data_catalog.py  audit_facebook_pages_report.py  audit_meta_data_catalog.py  audit_meta_metrics_availability.py  audit_meta_page_insights_live.py  promote_user_to_admin.py  upgrade_user_plan.py
tests/: test_account_summary_and_report_metadata.py  test_admin.py  test_ai_chat_followup.py  test_auth.py  test_billing.py  test_branding_gating.py  test_five_slide_metric_payload.py  test_free_report_limit.py  test_google_auth.py  test_instagram_business_login.py  test_instagram_business_sync.py  test_integration_provider_statuses.py  test_meta_ads_integration.py  test_meta_capi.py  test_meta_disconnect.py  test_meta_pages_loading.py  test_meta_report_attribution_resilience.py  (+10 more)
(+70 files in other folders)
