[tool.poetry]
name = "api"
version = "0.1.0"
description = "FastAPI service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
bcrypt = "==3.2.2"
boto3 = "^1.34.0"
requests = "^2.31.0"
python-multipart = "^0.0.22"
playwright = "^1.52.0"
anthropic = "^0.96.0"
google-auth = { version = "^2.40.3", extras = ["requests"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
